<?xml version="1.0" encoding="utf-8"?><!--FrameLayout: Recommended for Fragments-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.HomeFragment">

    <!--Container: ScrollView, can't withhold more than one element-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--Content-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--CardView as a whole container-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="@dimen/size_cardCornerRadius"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_paragraph"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_height_ImageViewHome"
                        android:src="@drawable/banner_platzi_conf" />
                    <!--Here View is just a separation line in between-->
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_HomeSubtitle"
                        android:layout_marginTop="@dimen/margin_HomeSubtitle"
                        android:layout_marginRight="@dimen/margin_HomeSubtitle"
                        android:text="@string/inicio_frag_tv_que_es"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/size_title"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_HomeSubtitle"
                        android:text="@string/inicio_frag_tv_que_es_resp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/size_HomeSubtitle" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="@dimen/size_cardCornerRadius"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_paragraph"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_height_ImageViewHome"
                        android:scaleType="centerCrop"
                        android:src="@drawable/platzi_conf_2" />
                    <!--Here View is just a separation line in between-->
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_HomeSubtitle"
                        android:text="@string/inicio_frag_tv_por_que"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/size_title"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_HomeSubtitle"
                        android:text="@string/inicio_frag_tv_por_que_resp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/size_HomeSubtitle" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="@dimen/size_cardCornerRadius"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_paragraph"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_height_ImageViewHome"
                        android:scaleType="centerCrop"
                        android:src="@drawable/platzi_conf_3" />
                    <!--Here View is just a separation line in between-->
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_HomeSubtitle"
                        android:text="@string/inicio_frag_tv_info"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/size_title"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_HomeSubtitle"
                        android:text="@string/inicio_frag_tv_info_resp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/size_HomeSubtitle" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</FrameLayout>